Fix the Spacing

--- a/src/Components/Posts/Posts.module.css
+++ b/src/Components/Posts/Posts.module.css
@@ -20,6 +20,7 @@
 }
 .dropdown {
   color: #00000080;
+  outline: #00000080;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -94,9 +95,10 @@
 
 @media (max-width: 430px) {
   .container {
-    flex-direction: column;
+    /* flex-direction: column;
     align-items: flex-start;
-    padding: 1em;
+    padding: 1em; */
+    margin-bottom: 2em;
   }
   .title {
     font-size: 16px;
