--- a/src/Pages/Single Post Page/SinglePostPage.module.css
+++ b/src/Pages/Single Post Page/SinglePostPage.module.css
@@ -1,3 +1,6 @@
+.header {
+    margin-bottom: 2em;
+}
 .backConatainer {
   margin-top: 60px;
   margin-bottom: 40px;
